@@ -1,0 +1,21 @@
+// "122.hac"
+// copy-modified from "121.hac"
+// port connection checking is conservative
+// doesn't catch shared receive port
+
+defproc foo(chan?(bool) B) { 
+chp {
+	B?
+}
+}
+
+defproc bar() {
+chan(bool) X;
+foo F(X);
+chp {
+	X?
+}
+}
+
+bar BQ;
+
