@@ -1,5 +1,5 @@
 # "test/parser/chp/Makefile.am"
-#	$Id: Makefile.am,v 1.18.10.2 2007/06/09 15:11:43 fang Exp $
+#	$Id: Makefile.am,v 1.18.10.3 2007/06/09 20:40:40 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -32,6 +32,7 @@ HACKT_PARSE_TEST_PASSES = \
 	090 091 092 093 094 097 098 099 \
 	100 102 104 105 106 108 109 \
 	110 111 112 113 114 115 116 117 118 \
+	121 122 123 \
 	top-level-01 top-level-02 top-level-03 \
 	bool-source bool-sink bool-sink-alt \
 	source-sink-01 \
@@ -53,6 +54,7 @@ HACKT_CREATE_TEST_PASSES = \
 	090 091 092 093 094 097 098 099 \
 	100 101 102 103 104 105 106 108 109 \
 	110 111 112 113 114 115 116 117 118 \
+	123 \
 	top-level-01 top-level-02 top-level-03 \
 	bool-source bool-sink \
 	source-sink-01 \
@@ -64,7 +66,8 @@ HACKT_CREATE_TEST_PASSES = \
 # 091 094: diagnostic improvement -- 
 # print template arguments for definition qualifiers
 
-HACKT_CREATE_TEST_FAILURES =
+HACKT_CREATE_TEST_FAILURES = \
+	121 122
 
 # TODO: alloc phase
 # several tests are not ready because we haven't defined
